Updated the backend routes for accessing data of a stored run.
